# graal

./: .clang-format  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .hgignore  .hgtags  .travis.sigtest.sh  .travis.yml  0001-no-forced-glibc.patch  0002-zig.patch  0003-embed-zig.patch  3rd_party_licenses.txt  AGENTS.md  ARCHITECTURE.md  AUTHORS.html  AUTHORS.md  CENSUS.md  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.md  ECLIPSE.md  FAQ.md  GRAAL_AUTHORS  GRAAL_README  LICENSE  LICENSE.EPL  LICENSE.LGPL  LICENSE.md  PROBLEMS.md  PUBLICATIONS.md  ProblemsIdeas.txt  README-Mandrel.md  README.html  README.md  README_GRAAL.txt  SECURITY.md  THIRD_PARTY_LICENSE.txt  UBUNTU.md  bench-common.libsonnet  (+24 more)
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
ci/: README.md  bench-common.libsonnet  common.jsonnet  jdk-binaries.json  repo-configuration.libsonnet  run-spec.md
ci_common/: bench-hwloc.hocon  bench.hocon  common.hocon  deploy.hocon  gate.hocon  gate_tasks.hocon  gate_tasks_bootstrap.hocon  m7_eighth.hocon  t72half.hocon  x32-tracera.hocon  x32.hocon  x4150.hocon  x52-tracera.hocon  x52.hocon
ci_includes/: bench.hocon  m7_eighth-c2.hocon  publish-javadoc.hocon  publish-javadoc.jsonnet  t72half-c1.hocon  t72half-c2.hocon  t72half.hocon  x32-c2.hocon  x4150.hocon  x52-c1.hocon  x52-c2.hocon  x52-tracera.hocon  x52.hocon
compiler/: .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FibTest.java  OWNERS.toml  README.md  build.sh  ci.hocon  ci.jsonnet  measure_overhead.sh  run  run.sh  run_baseline.sh  unittest.out
compiler/src/org.graalvm.papibridge/: CMakeLists.txt
compiler/src/org.graalvm.papibridge/src/: papibridge.c
contrib/: MethodMetricsEval.R
data/: sunflow_10iters_baseline.csv  sunflow_10iters_foreign_counter10000_atomicfields_nano.csv  sunflow_10iters_foreign_counter1000_atomicfields_mili.csv  sunflow_10iters_foreign_counter1000_atomicfields_nano.csv  sunflow_10iters_foreign_counter100_atomicfields.csv  sunflow_10iters_foreign_counter100_threadSpecificBuffer_nano.csv  sunflow_10iters_foreign_counter10_atomicfields_nano.csv
doc/: Goals.odt  IR.odt  graal.doxy
docs/: AGENTS.md  ARCHITECTURE.md  BENCHMARKING.md  CI.md  CONTRIBUTING.md  DATATYPES.md  DEBUGGING.md  DEPENDENCIES.md  Debugging.md  EXTENDING.md  Eclipse.md  Examples.md  FAQ.md  IDEs.md  INLINE-ASSEMBLER.md  INSTALLATION.md  INTEROP.md  Main.java  OWNERS.toml  PUBLICATIONS.md  Publications.md  README.md  SAFE-SULONG.md  TESTS.md  index.md  introduction.md
espresso/: .gitignore  CHANGELOG.md  Hello.java  HitEndTest.java  Main.java  OWNERS.toml  README.md  ci.jsonnet  setup-env.sh
examples/: .gitignore  ci.hocon  ci.jsonnet
graal/: findbugsExcludeFilter.xml  overview.html
include/: truffle.h
joonhwan/: Dockerfile  MANIFEST.MF  build-agent.sh
mx.espresso/: espresso-tools.svm  espresso.svm  jvm  jvm-ce  jvm-ee  mx_espresso.py  mx_espresso_benchmarks.py  native-ce  native-ee  native-image.properties  reflectconfig.json  scala-dacapo-warmup-forks.json  suite.py
mx.graal/: .project  .pydevproject  mx_graal.py  mx_graal_8.py  mx_graal_9.py  mx_graal_bench.py  mx_graal_makefile.py  sanitycheck.py  suite.py
mx.graal-core/: .project  .pydevproject  mx_graal_8.py  mx_graal_9.py  mx_graal_bench.py  mx_graal_benchmark.py  mx_graal_core.py  mx_graal_tools.py  outputparser.py  sanitycheck.py  suite.py
mx.sulong/: .project  CHECKSTYLE.md  commit-msg  dragonegg-mac.patch  mx_buildtools.py  mx_gitlogcheck.py  mx_sulong.py  mx_sulong_benchmarks.py  mx_testsuites.py  mx_tools.py  native-image.properties  suite.py  testsuites.py  tools.py
mx.truffle/: .project  .pydevproject  FilterTypes.java  mx_graaltest.py  mx_truffle.py  suite.py
mx.truffle-lsp/: mx_truffle_lsp.py  suite.py
regex/: CHANGELOG.md  README.md  ci.hocon  ci.jsonnet
sdk/: .gitignore  3rd_party_license_llvm-toolchain.txt  CHANGELOG.md  LICENSE.md  OWNERS.toml  README.md  ci.hocon  ci.jsonnet
substratevm/: AGENTS.md  BuildConfiguration.md  C-API.md  CHANGELOG.md  CLASS-INITIALIZATION.md  CONFIGURE.md  JFR.md  (+55 more)
sulong/projects/com.oracle.truffle.llvm.libraries.bitcode/: CMakeLists.txt  Makefile  sulong.def
sulong/projects/com.oracle.truffle.llvm.libraries.bitcode/include/: polyglot.h  sulong-internal.h
sulong/projects/com.oracle.truffle.llvm.libraries.bitcode/include/graalvm/llvm/: handles.h  polyglot.h
sulong/projects/com.oracle.truffle.llvm.libraries.bitcode/include/llvm/api/: toolchain.h
sulong/projects/com.oracle.truffle.llvm.libraries.bitcode/libcxxabi/: __threading_support  cxa_exception.cpp
sulong/projects/com.oracle.truffle.llvm.libraries.bitcode/libsulongxx/: exception_support.cpp
sulong/projects/com.oracle.truffle.llvm.libraries.bitcode/libsulongxx/windows/: cpp_threads.cpp  exception_helpers.cpp  sulong++.def  type_info.cpp
sulong/projects/com.oracle.truffle.llvm.libraries.bitcode/src/: abort.c  abort.h  assert.c  builtin.c  c11threads.c  clock.c  clone.c  complex.c  crt0.c  exec.c  exit.c  exit.h  fork.c  memcpy.c  pthreads.c  qsort.c  setjmp.c  signals.c  stat.c  string.c  sulong_dispose_context.c  unsupported.h
sulong/projects/com.oracle.truffle.llvm.libraries.bitcode/src/windows/: assert.c
sulong/projects/com.oracle.truffle.llvm.libraries.graalvm.llvm.libs/: CMakeLists.txt  Makefile  graalvm-llvm.def
sulong/projects/com.oracle.truffle.llvm.libraries.graalvm.llvm.libs/include/graalvm/llvm/: intrinsics.h  threads.h
sulong/projects/com.oracle.truffle.llvm.libraries.graalvm.llvm.libs/src/: common.h  handles.c  intrinsics.c  polyglot-buffer.c  polyglot-time.c  polyglot.c  threads.c  toolchain-api.c  truffle-compat.c
sulong/projects/com.oracle.truffle.llvm.libraries.native/: CMakeLists.txt  Makefile
sulong/projects/com.oracle.truffle.llvm.libraries.native/src/: fp128.c  fp80.c  globals.c  longdouble.c  misc.c  polyglot-mock.c  posix.c  stat.c
sulong/tests/toolchain-launchers-tests/: CMakeLists.txt  Makefile  runner.cpp
sulong/tests/toolchain-launchers-tests/src/: main.c  polyglot_biginteger.c  polyglot_biginteger_cxx.cpp
(+62501 files in other folders)
